# msads-revision

./: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
.github/workflows/: build-windows.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src/components/game/: ScoreDisplay.tsx  TimerBar.tsx
src/components/questions/: DragDrop.tsx  FillBlank.tsx  OpenText.tsx  QcmMulti.tsx  QcmSingle.tsx  QuestionRenderer.tsx  TrueFalse.tsx
src/components/ui/: Avatar.tsx  Button.tsx  Card.tsx  Confetti.tsx  Modal.tsx  ProgressBar.tsx
src/data/: badges.ts  questions.json
src/hooks/: useSound.ts  useTimer.ts
src/lib/: pdfExport.ts  questionUtils.ts  scoring.ts  textMatch.ts
src/pages/: Dashboard.tsx  ExamGame.tsx  Home.tsx  Leaderboard.tsx  ProfileCreate.tsx  ProfileSelect.tsx  QuizGame.tsx  Results.tsx  Settings.tsx  SplashScreen.tsx
src/stores/: useProfileStore.ts
src/types/: index.ts
