[package]
name = "msads-revision"
version = "1.0.0"
description = "Application de révision MSADS RNCP36241"
authors = ["EduCentre"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.10.3", features = [] }
tauri-plugin-fs = "2"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
opt-level = "s"
